--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
+    <div id="main_content_wrap" class="outer" style="width:800px;height: 500px;">
       <ul>
         <ol><a href="stage1/task1/task1.html"></a></ol>
         <ol><a href="stage1/task1/task2.html"></a></ol>
