--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer" style="width:800px;height: 500px;">
       <ul>
-        <ol><a href="stage1/task1/task1.html"></a></ol>
-        <ol><a href="stage1/task1/task2.html"></a></ol>
-        <ol><a href="stage1/task1/task3.html"></a></ol>
-        <ol><a href="stage1/task1/task4.html"></a></ol>
+        <li><a href="stage1/task1/task1.html"></a></li>
+        <li><a href="stage1/task1/task2.html"></a></li>
+        <li><a href="stage1/task1/task3.html"></a></li>
+        <li><a href="stage1/task1/task4.html"></a></li>
       </ul>
     </div>
 
