--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer" style="width:800px;height: 500px;">
+    <div style="width:800px;height: 500px;color: #ccc;">
       <ul>
         <li><a href="stage1/task1/task1.html"></a></li>
         <li><a href="stage1/task1/task2.html"></a></li>
