--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!-- MAIN CONTENT -->
     <h2>第一阶段任务</h2>
-    <div style="width:800px;height: 500px;color: #ccc;">
+    <div style="width:800px;height: 500px;color: #fff;">
       <ul>
 
         <li><a href="stage1/task1/task1.html">任务1</a></li>
