--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
     </div>
 
     <!-- MAIN CONTENT -->
-    <h2>第一阶段任务</h2>
+    <h2 style="color:#fff;">第一阶段任务</h2>
     <div style="width:800px;height: 500px;color: #fff;">
       <ul>
-
         <li><a href="stage1/task1/task1.html">任务1</a></li>
         <li><a href="stage1/task2/task2.html">任务2</a></li>
         <li><a href="stage1/task3/task3.html">任务3</a></li>
