--- a/stage1/task3/task3.html
+++ b/stage1/task3/task3.html
@@ -5,22 +5,76 @@
     <title>Title</title>
     <style>
         *{margin: 0;padding: 0;}
-        .main{margin-top:20px;margin-left:20px;margin-right: 20px;
-            background-color:#eee;border: 1px solid #999;overflow: hidden;}
-        .left{width: 200px;height:120px;border: 1px solid #999;
-            position: absolute;margin: 20px;}
-        .left img{position: absolute;margin-top: 19px;margin-left: 19px;border: 1px solid #999;}
-        .left p{font-family: "微软雅黑";font-size: 12px;color:#C22337;
-            line-height: 120px;margin-left: 105px;margin-top: -30px;}
-        .middle{border: 1px solid #999;
-            position: absolute;left: 262px;top: 41px;right: 182px;
-            text-indent: 2em;line-height: 2em;}
-        .middle p{margin-left: 20px;margin-right: 20px;margin-bottom: 40px;font-family: "微软雅黑";}
-        .middle h3{margin-top: 30px;text-indent:0;margin-left: 20px;}
-        .middle ul{text-indent: 0;margin-left: 50px;margin-top: 10px;font-family: "微软雅黑";}
-        .right{width: 120px;border: 1px solid #999;
-            float:right;margin-right: 20px;margin-top: 20px; margin-bottom: 20px;}
-        .right img{margin-left: 19px;margin-top: 19px;border: 1px solid #999;}
+        .main{
+            margin-top:20px;
+            margin-left:20px;
+            margin-right: 20px;
+            background-color:#eee;
+            border: 1px solid #999;
+            overflow: hidden;
+            padding: 20px;
+            height: auto;
+        }
+        .left{
+            width: 200px;
+            height:120px;
+            border: 1px solid #999;
+            float: left;
+            position: relative;
+        }
+        .left img{
+            position: absolute;
+            margin-top: 19px;
+            margin-left: 19px;
+            border: 1px solid #999;
+        }
+        .left p{
+            font-family: "微软雅黑";
+            font-size: 12px;
+            color:#C22337;
+            line-height: 120px;
+            margin-left: 105px;
+            margin-top: -30px;
+        }
+        .middle{
+            border: 1px solid #999;
+            text-indent: 2em;
+            line-height: 2em;
+            float: left;
+            margin-left: 221px;
+            margin-right:145px;
+            margin-top: -120px;
+        }
+        .middle p{
+            margin-left: 20px;
+            margin-right: 20px;
+            margin-bottom: 40px;
+            font-family: "微软雅黑";
+        }
+        .middle h3{
+            margin-top: 30px;
+            text-indent:0;
+            margin-left: 20px;
+        }
+        .middle ul{
+            text-indent: 0;
+            margin-left: 50px;
+            margin-top: 10px;
+            font-family: "微软雅黑";
+        }
+        .right{
+            width: 120px;
+            border: 1px solid #999;
+            float:left;
+            margin-top: -503px;
+            position: relative;
+            right: -1160px;
+        }
+        .right img{
+            margin-left: 19px;
+            margin-top: 19px;
+            border: 1px solid #999;
+        }
     </style>
 </head>
 <body>
