--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <li><a href="stage1/task2/task2.html">任务2</a></li>
         <li><a href="stage1/task3/task3.html">任务3</a></li>
         <li><a href="stage1/task4/task4.html">任务4</a></li>
+        <li><a href="stage1/task5/task5.html">任务4</a></li>
       </ul>
     </div>
 
