task51 解决了图片预加载问题

--- a/stage4/task51/index.html
+++ b/stage4/task51/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>多功能相册</title>
     <link type="text/css" rel="stylesheet" href="main.css">
-    <script type="text/css" rel="stylesheet" src="https://code.jquery.com/jquery-2.2.3.js"></script>
-    <script type="text/javascript" src="ifeAlbum.js"></script>
+    <script type="text/css" src="js/jquery-1.8.3.min.js"></script>
+    <script type="text/javascript" src="js/ifeAlbum.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
-    <script type="text/javascript" src="main.js"></script>
+    <header>
+        <h1>ifeAlbum</h1>
+    </header>
+    <main id="main"></main>
+    <aside>
+        <ul>
+            <li><a href="#">拼图布局</a></li>
+            <li><a href="#">瀑布布局</a></li>
+            <li><a href="#">木桶布局</a></li>
+        </ul>
+    </aside>
 </body>
 </html>
