--- a/stage4/task51/index.html
+++ b/stage4/task51/index.html
@@ -14,11 +14,20 @@
     </header>
     <main id="main"></main>
     <aside>
-        <ul>
-            <li><a href="#">拼图布局</a></li>
-            <li><a href="#">瀑布布局</a></li>
-            <li><a href="#">木桶布局</a></li>
-        </ul>
+        <label>Add Images:</label>
+        <input type="text" id="imgSrcText">
+        <input type="button" id="confirmBtn" value="Confirm">
+        <label>Layout type:</label>
+        <input type="button" id="puzzleBtn" value="Puzzle Layout">
+        <input type="button" id="waterfallBtn" value="Waterfall Layout">
+        <input type="button" id="barrelBtn" value="Barrel Layout">
     </aside>
+    <div id="fullScreen">
+        <div class="bg">
+            <input type="button" id="left" value="<">
+            <img src="" alt="">
+            <input type="button" id="right" value=">">
+        </div>
+    </div>
 </body>
 </html>
