--- a/stage4/task51/index.html
+++ b/stage4/task51/index.html
@@ -18,9 +18,11 @@
         <input type="button" id="puzzleBtn" value="拼图布局">
         <input type="button" id="waterfallBtn" value="瀑布布局">
         <input type="button" id="barrelBtn" value="木桶布局">
-        <label id="addLabel">添加图片:</label>
-        <input type="text" id="imgNum" value="请输入图片张数" style="font-size: 12px;color: #BABABA" onfocus="value=''">
-        <input type="button" id="confirmBtn" value="确认">
+        <div id="addDiv">
+            <label id="addLabel">添加图片:</label>
+            <input type="text" id="imgNum" value="请输入图片张数" style="font-size: 12px;color: #BABABA" onfocus="value=''">
+            <input type="button" id="confirmBtn" value="确认">
+        </div>
         <div id="deleteDiv">
             <label>删除图片:</label>
             <input type="button" id="start" value="开始">
